--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,57 @@
-/* You can add global styles to this file, and also import other style files */
+/* GENERAL */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+/* HEADER */
+
+header {
+    background-color: rgb(200, 201, 197);
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 120px;
+}
+
+#titre {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 120px;
+}
+
+#easdir {
+    font: 1.5em "Forte", serif;
+    color: rgb(54, 213, 251);
+}
+
+#logo {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+}
+
+
+/* CONTENU */
+
+
+/* FOOTER */
+
+footer {
+    background: rgb(200, 201, 197);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.text-footer {
+    margin: 15px;
+    text-align: center;
+}
