--- a/src/styles.css
+++ b/src/styles.css
@@ -10,10 +10,10 @@
 
 header {
     background-color: rgb(200, 201, 197);
-    position: absolute;
-    top: 0;
     width: 100%;
-    height: 120px;
+    padding-bottom: 10px;
+    display: flex;
+    flex-direction: row;
 }
 
 #titre {
@@ -21,7 +21,8 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 120px;
+    text-align: center;
+    width: 100%;
 }
 
 #easdir {
@@ -30,9 +31,6 @@ header {
 }
 
 #logo {
-    position: absolute;
-    left: 0;
-    top: 0;
     width: 100px;
     height: 100px;
     margin: 10px;
@@ -41,14 +39,40 @@ header {
 
 /* CONTENU */
 
+#contenu {
+    margin: 5px;
+}
+
+#elements {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+article {
+    border: solid;
+    padding: 5px;
+    margin: 10px;
+    width: 100px;
+}
+
+article img {
+    width: 100px;
+    height: 100px;
+}
+
+article p {
+    text-align: center;
+    word-wrap: break-word;
+}
+
 
 /* FOOTER */
 
 footer {
     background: rgb(200, 201, 197);
-    position: absolute;
-    bottom: 0;
     width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .text-footer {
