--- a/src/styles.css
+++ b/src/styles.css
@@ -39,28 +39,51 @@ header {
 
 /* CONTENU */
 
-#contenu {
-    margin: 5px;
+#contenu button {
+    padding: 5px;
+    border: solid;
+    border-radius: 10px;
 }
 
-#elements {
+#contenu-titre {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+}
+
+#contenu-titre button {
+    background-color: lightcoral;
+    border-color: red;
+}
+
+#contenu-button button {
+    background-color: white;
+    margin: 10px;
+    width: 115px;
+}
+
+#contenu-elements {
     display: flex;
     flex-wrap: wrap;
 }
 
-article {
+#contenu-elements article {
     border: solid;
+    border-radius: 10px;
     padding: 5px;
     margin: 10px;
     width: 100px;
 }
 
-article img {
+#contenu-elements article img {
     width: 100px;
     height: 100px;
+    border-radius: 10px;
 }
 
-article p {
+#contenu-elements article p {
     text-align: center;
     word-wrap: break-word;
 }
@@ -73,6 +96,7 @@ footer {
     width: 100%;
     padding-top: 5px;
     padding-bottom: 5px;
+    margin-top: 10px;
 }
 
 .text-footer {
