--- a/src/styles.css
+++ b/src/styles.css
@@ -37,13 +37,21 @@ header {
 }
 
 
-/* CONTENU */
+/* CONTENU GENERAL PAGE */
 
-#contenu button {
+button {
     padding: 5px;
     border: solid;
     border-radius: 10px;
 }
+
+#button-suppr {
+    background-color: lightcoral;
+    border-color: red;
+}
+
+
+/* CONTENU PAGE LISTE */
 
 #contenu-titre {
     display: flex;
@@ -51,11 +59,6 @@ header {
     justify-content: space-between;
     align-items: center;
     margin: 10px;
-}
-
-#contenu-titre button {
-    background-color: lightcoral;
-    border-color: red;
 }
 
 #contenu-button button {
@@ -89,6 +92,34 @@ header {
 }
 
 
+/* CONTENU PAGE DETAIL TEXTE */
+
+#texte {
+    margin: 10px;
+}
+
+#texte button {
+    margin-bottom: 20px;
+}
+
+#texte-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#texte-name {
+    margin-left: 5px;
+    margin-bottom: 10px;
+}
+
+#texte-contenu {
+    border: solid;
+    border-color: rgb(200, 201, 197);
+    padding: 5px;
+}
+
+
 /* FOOTER */
 
 footer {
@@ -97,6 +128,11 @@ footer {
     padding-top: 5px;
     padding-bottom: 5px;
     margin-top: 10px;
+}
+
+.text-footer {
+    margin: 15px;
+    text-align: center;
 }
 
 .text-footer {
