--- a/src/styles.css
+++ b/src/styles.css
@@ -5,15 +5,25 @@
     padding: 0;
 }
 
+.clair {
+    background-color: rgb(200, 201, 197);
+    color: black;
+}
+
+.sombre {
+    background-color: black;
+    color: white;
+}
+
 
 /* HEADER */
 
 header {
-    background-color: rgb(200, 201, 197);
     width: 100%;
     padding-bottom: 10px;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 #titre {
@@ -34,6 +44,12 @@ header {
     width: 100px;
     height: 100px;
     margin: 10px;
+}
+
+#colorMode img {
+    width: 50px;
+    height: 50px;
+    margin: 20px;
 }
 
 
