--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,21 @@
     /* GENERAL */
-    
+
     * {
         margin: 0;
         padding: 0;
     }
-    
+
     .clair {
         background-color: rgb(200, 201, 197);
         color: black;
     }
-    
+
     .sombre {
         background-color: black;
         color: white;
     }
     /* HEADER */
-    
+
     header {
         width: 100%;
         padding-bottom: 10px;
@@ -23,7 +23,7 @@
         flex-direction: row;
         align-items: center;
     }
-    
+
     #titre {
         display: flex;
         flex-direction: column;
@@ -32,37 +32,38 @@
         text-align: center;
         width: 100%;
     }
-    
+
     #easdir {
         font: 1.5em "Forte", serif;
         color: rgb(54, 213, 251);
     }
-    
+
     #logo {
         width: 100px;
         height: 100px;
         margin: 10px;
     }
-    
+
     #colorMode img {
         width: 50px;
         height: 50px;
         margin: 20px;
     }
     /* CONTENU GENERAL PAGES */
-    
+
     button {
         padding: 5px;
         border: solid;
         border-radius: 10px;
+        background-color: white;
     }
-    
+
     #button-suppr {
         background-color: lightcoral;
         border-color: red;
     }
     /* CONTENU PAGE LISTE */
-    
+
     #contenu-titre {
         display: flex;
         flex-direction: row;
@@ -70,18 +71,17 @@
         align-items: center;
         margin: 10px;
     }
-    
+
     #contenu-button button {
-        background-color: white;
         margin: 10px;
         width: 115px;
     }
-    
+
     #contenu-elements {
         display: flex;
         flex-wrap: wrap;
     }
-    
+
     #contenu-elements article {
         border: solid;
         border-radius: 10px;
@@ -90,13 +90,13 @@
         width: 100px;
         height: 185px;
     }
-    
+
     #contenu-elements article img {
         width: 100px;
         height: 100px;
         border-radius: 10px;
     }
-    
+
     #contenu-elements article p {
         text-align: center;
         word-wrap: break-word;
@@ -104,14 +104,14 @@
         white-space: nowrap;
         text-overflow: ellipsis;
     }
-    
+
     #contenu-elements article input {
         text-align: center;
         word-wrap: break-word;
         width: 95px;
         margin-top: 5px;
     }
-    
+
     #contenu-elements article button {
         text-align: center;
         width: 50px;
@@ -119,42 +119,42 @@
         margin-top: 5px;
     }
     /* CONTENU PAGES DETAIL */
-    
+
     #display {
         margin: 10px;
     }
-    
-    #texte button {
+
+    #display button {
         margin-bottom: 20px;
     }
-    
+
     #display-button {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
-    
-    #texte-name {
+
+    #display-name {
         margin-left: 5px;
         margin-bottom: 10px;
         font-size: 1.5em;
         height: 30px;
     }
-    
-    #texte-contenu {
+
+    #display-contenu {
         border: solid;
         border-color: rgb(200, 201, 197);
         padding: 5px;
         font-size: 1em;
         height: 20px;
     }
-    
-    #texte-edit-form form {
+
+    #display-edit-form form {
         display: flex;
         flex-direction: column;
     }
     /* FOOTER */
-    
+
     footer {
         background: rgb(200, 201, 197);
         width: 100%;
@@ -162,12 +162,12 @@
         padding-bottom: 5px;
         margin-top: 10px;
     }
-    
+
     .text-footer {
         margin: 15px;
         text-align: center;
     }
-    
+
     .text-footer {
         margin: 15px;
         text-align: center;
