Préparation au rendu nettoyage du code création d'un dataset propre ajustement du CSS

--- a/src/styles.css
+++ b/src/styles.css
@@ -153,6 +153,11 @@ button {
   height: 20px;
 }
 
+#display-data {
+  max-width: 500px;
+  max-height: 500px;
+}
+
 #display-edit-form form {
   display: flex;
   flex-direction: column;
