--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,13 @@ header {
 #colorMode img {
   width: 50px;
   height: 50px;
-  margin: 20px;
+  margin: 10px;
+}
+
+#langMode img {
+  width: 50px;
+  height: 25px;
+  margin: 10px;
 }
 
 
