--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ button {
   background-color: white;
 }
 
-#button-suppr {
+.button-suppr {
   background-color: lightcoral;
   border-color: red;
 }
@@ -159,7 +159,7 @@ button {
   height: 20px;
 }
 
-#display-data {
+#display-img {
   max-width: 500px;
   max-height: 500px;
 }
