--- a/src/styles.css
+++ b/src/styles.css
@@ -15,12 +15,12 @@
   color: white;
 }
 
-.clair + * > *{
+.sombre ~ * #contenu{
   background-color: white;
   color: black;
 }
 
-.sombre + * > *{
+.sombre ~ * #contenu{
   background-color: rgba(0, 0, 0, 0.700);
   color: white;
 }
